# internetapplicationsengineeringguesttalk

./: .gitattributes  .gitignore  CHANGES.md  QUESTIONS.md  README.md  TALK.md  WEAKHOSTMODEL.md  WIDGETS.md
WEAKHOSTMODEL/chatprogramme/: chatprogramme.c  deployme.sh
WIDGETS/updater/: meson.build  nginx.conf
WIDGETS/updater/appsrc/: updater.c  updater_cgi.c  updater_fcgi.c  updater_json.c
WIDGETS/updater/htdocs/: index.html  index.json  index.template.html  index.template.json  index_json.html  locallib.js
WIDGETS/updater/htdocs/debugging/: index.html  raw_data_block.html
WIDGETS/updater/src/: dynstring.h  filesystem.c  filesystem.h  timefn.c  timefn.h  utilityfn.c  utilityfn.h
